--- a/modeling_testing.ipynb
+++ b/modeling_testing.ipynb
@@ -514,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Further Data Cleaning, Preprocessing"
+    "# Step 3: Further Data Cleaning, Preprocessing"
    ]
   },
   {
@@ -747,7 +747,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Feature Engineering"
+    "# Step 4: Feature Engineering"
    ]
   },
   {
@@ -802,7 +802,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Training and Testing Data"
+    "# Step 5: Training and Testing Data"
    ]
   },
   {
